--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -52,30 +52,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        swift_version: [5.3, 5.4, 5.5]
+        swift_version: [5.3, 5.4, 5.5, 5.6]
         distro: [xenial, bionic, focal]
-    steps:
-    - uses: actions/checkout@v1
-      with:
-        submodules: recursive
-    - name: Build
-      uses: SusanDoggie/swift-action@main
-      with:
-        action: build
-    - name: Run tests
-      uses: SusanDoggie/swift-action@main
-      with:
-        action: test
-  linux_swift:
-    name: ${{ matrix.swift_version }}-${{ matrix.distro }}
-    container:
-      image: docker://swift:${{ matrix.swift_version }}-${{ matrix.distro }}
-    runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        swift_version: [5.3, 5.4, 5.5]
-        distro: [centos8, amazonlinux2]
+        exclude:
+          - swift_version: 5.6
+            distro: xenial
     steps:
     - uses: actions/checkout@v1
       with:
@@ -97,34 +78,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        swift_version: [5.6, main]
-        distro: [xenial, bionic, focal]
-        exclude:
-          - swift_version: main
-            distro: xenial
-    steps:
-    - uses: actions/checkout@v1
-      with:
-        submodules: recursive
-    - name: Build
-      uses: SusanDoggie/swift-action@main
-      with:
-        action: build
-    - name: Run tests
-      uses: SusanDoggie/swift-action@main
-      with:
-        action: test
-  linux_swift_nightly:
-    name: nightly-${{ matrix.swift_version }}-${{ matrix.distro }}
-    container:
-      image: docker://swiftlang/swift:nightly-${{ matrix.swift_version }}-${{ matrix.distro }}
-    runs-on: ubuntu-latest
-    continue-on-error: true
-    strategy:
-      fail-fast: false
-      matrix:
-        swift_version: [5.6, main]
-        distro: [centos8, amazonlinux2]
+        swift_version: [main]
+        distro: [bionic, focal]
     steps:
     - uses: actions/checkout@v1
       with:
