--- a/.github/workflows/builder.yml
+++ b/.github/workflows/builder.yml
@@ -52,11 +52,21 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        swift_version: [5.3, 5.4, 5.5, 5.6]
-        distro: [xenial, bionic, focal]
+        swift_version: [5.3, 5.4, 5.5, 5.6, 5.7]
+        distro: [xenial, bionic, focal, jammy]
         exclude:
           - swift_version: 5.6
             distro: xenial
+          - swift_version: 5.7
+            distro: xenial
+          - swift_version: 5.3
+            distro: jammy
+          - swift_version: 5.4
+            distro: jammy
+          - swift_version: 5.5
+            distro: jammy
+          - swift_version: 5.6
+            distro: jammy
     steps:
     - uses: actions/checkout@v1
       with:
