--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "Sources/libscrypt/libscrypt"]
 	path = Sources/libscrypt/libscrypt
 	url = https://github.com/technion/libscrypt.git
+	shallow = true
